# PLC

./: LICENSE  documentation.md  life_manager.db  pyproject.toml  replit.nix
attached_assets/: Pasted---1739402395313.txt
src/: config.py  main.py
src/db/: database.py  models.py
src/patterns/: __init__.py  observer.py  repository.py  task_factory.py
src/services/: __init__.py  ai_service.py  auth_service.py  habit_service.py  library_service.py  task_service.py
src/ui/: __init__.py  auth_frame.py  calendar_frame.py  habits_frame.py  library_frame.py  main_window.py  tasks_frame.py
