[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "darkdetect>=0.8.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
    "pillow>=11.1.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
]
